# ralph-agi-001

./: .gitignore  AI-LONG-TASK-INTEGRATION.md  ANNOUNCEMENT_TWEET.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_ANALYSIS_V2.md  DELIVERABLES-SUMMARY.md  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  GUIDED-SETUP-RESPONSE.md  META_PRD_v4.json  RALPH-AGI-API-SPECIFICATION.md  RALPH-AGI-DEVELOPER-GUIDE.md  RALPH-AGI-IMPLEMENTATION-ROADMAP.md  RALPH-AGI-PRODUCT-REQUIREMENTS-DOCUMENT.md  README.md  WEBSITE_UPDATES.md  analysis.md  config.yaml  ideas.md  install.sh  netlify.toml  package-lock.json  package.json  pyproject.toml  run-ralph.sh  vite.config.ts
.beads/: issues.jsonl  metadata.json
.beads/issues/: ralph-agi-001-001.md  ralph-agi-001-002.md  ralph-agi-001-003.md  ralph-agi-001-004.md  ralph-agi-001-005.md  ralph-agi-001-006.md  ralph-agi-001-007.md  ralph-agi-001-008.md  ralph-agi-001-010.md  ralph-agi-001-011.md
.beads/plans/: sprint3-cli-output-plan.md
.claude/commands/: twitter-update.md
.ralph/: config.json  worktrees.json
.ralph/tasks/: add-dark-mode-faa38d.yaml  add-user-authentication-87e6d9.yaml  implement-dark-mode-toggle-3a5652.yaml  refactor-css-classes-44e68b.yaml  test-start-button-functionality-77e987.yaml
_bmad-output/implementation-artifacts/: sprint-status.yaml
_bmad-output/planning-artifacts/: project-context.md  workflow-status.yaml
client/: index.html
client/src/: App.tsx  index.css
demo/: .gitignore  README.md  RESULTS_TEMPLATE.md  config.yaml  run_demo.sh
demo/artifacts/: ralph-hallucinated-dry-run.patch
demo/scenario-1-hello/: PRD.json
demo/scenario-2-calculator/: PRD.json
demo/scenario-3-multitask/: PRD.json
docs/: CODEBASE_MAP.md  DEV_TEAM_UPDATE_2026-01-20.md  QUICKSTART.md  RALPH-AGI-DEVELOPER-GUIDE.md  RALPH-AGI-IMPLEMENTATION-ROADMAP.md  RALPH-AGI-PRODUCT-REQUIREMENTS-DOCUMENT.md  RALPH-AGI-TECHNICAL-ARCHITECTURE.md  RALPH-AGI-Twitter-SOP.md  README.md  TASK_OUTPUT_IMPLEMENTATION.md  TROUBLESHOOTING.md  afk-mode.md
docs/research/: memvid-evaluation.md
pressure-test/: PRD.json  config.yaml
ralph_agi/: cli.py  init_wizard.py  interactive.py  output.py  utils.py
ralph_agi/api/: __init__.py  app.py  dependencies.py  schemas.py
ralph_agi/commands/: __init__.py  history.py  registry.py
ralph_agi/core/: __init__.py  config.py  loop.py
ralph_agi/learning/: __init__.py  history.py  logs.py  patterns.py  progress.py
ralph_agi/llm/: __init__.py  agents.py  anthropic.py  client.py  evaluator.py  openai.py  openrouter.py  orchestrator.py  prompts.py  verification.py
rnd/: BMAD-WORKFLOW-GUIDE.md  PROJECT-ONBOARDING.md  QUICK-ACCESS-GUIDE.md  README.md
src/: __init__.py
tests/: __init__.py  test_math_ops.py  test_output.py  test_utils.py
website/: .env.example  CLAUDE.md  index.html
(+274 files in other folders)
