[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ralph-agi"
version = "0.1.0"
description = "Recursive Autonomous Long-horizon Processing with Hierarchical AGI-like Intelligence"
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "RALPH-AGI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML>=6.0",
    "memvid-sdk>=0.1.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0",
    "croniter>=2.0.0",
    "APScheduler>=3.10.0",
    "textual>=0.50.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.70.0",
    "openai>=1.0.0",
]

[project.scripts]
ralph-agi = "ralph_agi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ralph_agi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["ralph_agi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
